# nginx-fastapi-vue-docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
backend/: app.py  main.py  pyproject.toml
backend/app/: __init__.py  app.py
backend/app/routes/: __init__.py  api.py
docker/: config.json
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js  vue.config.js
frontend/src/: App.vue
