[tool.poetry]
name = "nginx-fastapi-vue-docker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[[tool.poetry.packages]]
include = "app"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.4"
black = "^22.1.0"
isort = {extras = ["toml"], version = "^5.10.1"}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79
